gccida/g2/rebuild_jump_labels
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:543:4: error: expected ';' after expression
rtx i; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:543:5: error: use of undeclared identifier 'i'
rtx i; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:569:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)rtx[3].fld[0]; 
                      ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:574:69: error: expected expression
if ( *( _BYTE *)( v6.rtwint + 2) == 13 && !reg_mentioned_p( *( rtx *)( v6.rtwint + 8), *( rtx *)&rtx[2]) ) 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:574:96: error: expected expression
if ( *( _BYTE *)( v6.rtwint + 2) == 13 && !reg_mentioned_p( *( rtx *)( v6.rtwint + 8), *( rtx *)&rtx[2]) ) 
                                                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:584:7: error: use of undeclared identifier 'i'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:584:40: error: use of undeclared identifier 'i'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:584:43: error: use of undeclared identifier 'i'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:584:53: error: expected ')'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:584:5: note: to match this '('
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/jump.c:586:23: error: use of undeclared identifier 'i'
v4.rtwint = ( __int64)i->fld[0]; 
                      ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rebuild_jump_labels/src/obj/jump.o] Error 1
